Graphics Only/Killer Bees/Scripts/bin/main_BuildLog (MacBook-Air.lan's conflicted copy 2021-07-24).txt
parsing
Got 3 errors and 0 warnings while executing:
  (/Users/nick/Dropbox/C64/Projects/Freeze/Scripts/game/gameplay/draw.asm 24:37) Error: Syntax error
  (/Users/nick/Dropbox/C64/Projects/Freeze/Scripts/game/gameplay/draw.asm 36:17) Error: Syntax error
  (/Users/nick/Dropbox/C64/Projects/Freeze/Scripts/game/gameplay/draw.asm 69:7) Error: Unknown symbol 'CalculateCharAddress'



 TopLeft:  .byte 102, 105, 105, 107, 165, 165, 169, 171
     .byte 110, 113, 113, 115, 174. 174, 178, 179
                                    ^

Error: Syntax error


